exports[`<Dashboard /> renders correctly with black theme 1`] = `
<div
  className="sc-dVhcbM bZEVIZ">
  <header
    className="sc-dxgOiQ fItfJW">
    <a
      className="sc-EHOje eDNBGO"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb fGPksR">
      <button
        className="fa fa-bars sc-bdVaJa beLtwZ"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac gJhOku">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC kKPHnP"
    name="content-wrapper" />
  <footer
    className="sc-fMiknA jspwbC" />
</div>
`;

exports[`<Dashboard /> renders correctly with black-light theme 1`] = `
<div
  className="sc-dVhcbM bZEVIZ">
  <header
    className="sc-dxgOiQ fItfJW">
    <a
      className="sc-EHOje eDNBGO"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb fGPksR">
      <button
        className="fa fa-bars sc-bdVaJa beLtwZ"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac eNOrfK">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC cazmzY"
    name="content-wrapper" />
  <footer
    className="sc-fMiknA kwRsPU" />
</div>
`;

exports[`<Dashboard /> renders correctly with blue theme 1`] = `
<div
  className="sc-dVhcbM bZEVIZ">
  <header
    className="sc-dxgOiQ huMqzU">
    <a
      className="sc-EHOje hNXHJf"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb ciCesD">
      <button
        className="fa fa-bars sc-bdVaJa jwsHtM"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac gJhOku">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC kKPHnP"
    name="content-wrapper" />
  <footer
    className="sc-fMiknA jspwbC" />
</div>
`;

exports[`<Dashboard /> renders correctly with blue-light theme 1`] = `
<div
  className="sc-dVhcbM bZEVIZ">
  <header
    className="sc-dxgOiQ huMqzU">
    <a
      className="sc-EHOje hNXHJf"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb ciCesD">
      <button
        className="fa fa-bars sc-bdVaJa jwsHtM"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac eNOrfK">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC cazmzY"
    name="content-wrapper" />
  <footer
    className="sc-fMiknA kwRsPU" />
</div>
`;

exports[`<Dashboard /> renders correctly with fixed and sidebarMini options 1`] = `
<div
  className="sc-dVhcbM bZEVIZ">
  <header
    className="sc-dxgOiQ fhLSeg">
    <a
      className="sc-EHOje hNXHJf"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb ciCesD">
      <button
        className="fa fa-bars sc-bdVaJa jwsHtM"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac eRCimD">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC fZoGIV"
    name="content-wrapper" />
  <footer
    className="sc-fMiknA jspwbC" />
</div>
`;

exports[`<Dashboard /> renders correctly with fixed option 1`] = `
<div
  className="sc-dVhcbM bZEVIZ">
  <header
    className="sc-dxgOiQ fhLSeg">
    <a
      className="sc-EHOje hNXHJf"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb ciCesD">
      <button
        className="fa fa-bars sc-bdVaJa jwsHtM"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac eRCimD">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC fZoGIV"
    name="content-wrapper" />
  <footer
    className="sc-fMiknA jspwbC" />
</div>
`;

exports[`<Dashboard /> renders correctly with fixed, initialCollapse, and sidebarMini options 1`] = `
<div
  className="sc-dVhcbM bZEVIZ">
  <header
    className="sc-dxgOiQ fhLSeg">
    <a
      className="sc-EHOje dNKqEX"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM jqHeMk"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw bXXxci"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb jHIWoV">
      <button
        className="fa fa-bars sc-bdVaJa jwsHtM"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac gyZpHT">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC hAdJiw"
    name="content-wrapper" />
  <footer
    className="sc-fMiknA bwDdpb" />
</div>
`;

exports[`<Dashboard /> renders correctly with green theme 1`] = `
<div
  className="sc-dVhcbM bZEVIZ">
  <header
    className="sc-dxgOiQ huMqzU">
    <a
      className="sc-EHOje bQORtE"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb kigmzE">
      <button
        className="fa fa-bars sc-bdVaJa gicuGo"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac gJhOku">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC kKPHnP"
    name="content-wrapper" />
  <footer
    className="sc-fMiknA jspwbC" />
</div>
`;

exports[`<Dashboard /> renders correctly with green-light theme 1`] = `
<div
  className="sc-dVhcbM bZEVIZ">
  <header
    className="sc-dxgOiQ huMqzU">
    <a
      className="sc-EHOje bQORtE"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb kigmzE">
      <button
        className="fa fa-bars sc-bdVaJa gicuGo"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac eNOrfK">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC cazmzY"
    name="content-wrapper" />
  <footer
    className="sc-fMiknA kwRsPU" />
</div>
`;

exports[`<Dashboard /> renders correctly with initialCollapse and sidebarMini options 1`] = `
<div
  className="sc-dVhcbM bZEVIZ">
  <header
    className="sc-dxgOiQ huMqzU">
    <a
      className="sc-EHOje dNKqEX"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM jqHeMk"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw bXXxci"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb jHIWoV">
      <button
        className="fa fa-bars sc-bdVaJa jwsHtM"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac cvKlFP">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC ihfCpo"
    name="content-wrapper" />
  <footer
    className="sc-fMiknA bwDdpb" />
</div>
`;

exports[`<Dashboard /> renders correctly with initialCollapse option 1`] = `
<div
  className="sc-dVhcbM bZEVIZ">
  <header
    className="sc-dxgOiQ huMqzU">
    <a
      className="sc-EHOje hNXHJf"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb ciCesD">
      <button
        className="fa fa-bars sc-bdVaJa jwsHtM"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac iKNtCZ">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC iftlhE"
    name="content-wrapper" />
  <footer
    className="sc-fMiknA dEImMD" />
</div>
`;

exports[`<Dashboard /> renders correctly with no options 1`] = `
<div
  className="sc-dVhcbM bZEVIZ">
  <header
    className="sc-dxgOiQ huMqzU">
    <a
      className="sc-EHOje hNXHJf"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb ciCesD">
      <button
        className="fa fa-bars sc-bdVaJa jwsHtM"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac gJhOku">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC kKPHnP"
    name="content-wrapper" />
  <footer
    className="sc-fMiknA jspwbC" />
</div>
`;

exports[`<Dashboard /> renders correctly with purple theme 1`] = `
<div
  className="sc-dVhcbM bZEVIZ">
  <header
    className="sc-dxgOiQ huMqzU">
    <a
      className="sc-EHOje bWHJWZ"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb jwLIpi">
      <button
        className="fa fa-bars sc-bdVaJa cKgFyI"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac gJhOku">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC kKPHnP"
    name="content-wrapper" />
  <footer
    className="sc-fMiknA jspwbC" />
</div>
`;

exports[`<Dashboard /> renders correctly with purple-light theme 1`] = `
<div
  className="sc-dVhcbM bZEVIZ">
  <header
    className="sc-dxgOiQ huMqzU">
    <a
      className="sc-EHOje bWHJWZ"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb jwLIpi">
      <button
        className="fa fa-bars sc-bdVaJa cKgFyI"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac eNOrfK">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC cazmzY"
    name="content-wrapper" />
  <footer
    className="sc-fMiknA kwRsPU" />
</div>
`;

exports[`<Dashboard /> renders correctly with red theme 1`] = `
<div
  className="sc-dVhcbM bZEVIZ">
  <header
    className="sc-dxgOiQ huMqzU">
    <a
      className="sc-EHOje iFCtkw"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb kuJgEm">
      <button
        className="fa fa-bars sc-bdVaJa jxNjZi"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac gJhOku">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC kKPHnP"
    name="content-wrapper" />
  <footer
    className="sc-fMiknA jspwbC" />
</div>
`;

exports[`<Dashboard /> renders correctly with red-light theme 1`] = `
<div
  className="sc-dVhcbM bZEVIZ">
  <header
    className="sc-dxgOiQ huMqzU">
    <a
      className="sc-EHOje iFCtkw"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb kuJgEm">
      <button
        className="fa fa-bars sc-bdVaJa jxNjZi"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac eNOrfK">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC cazmzY"
    name="content-wrapper" />
  <footer
    className="sc-fMiknA kwRsPU" />
</div>
`;

exports[`<Dashboard /> renders correctly with sidebarMini option 1`] = `
<div
  className="sc-dVhcbM bZEVIZ">
  <header
    className="sc-dxgOiQ huMqzU">
    <a
      className="sc-EHOje hNXHJf"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb ciCesD">
      <button
        className="fa fa-bars sc-bdVaJa jwsHtM"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac gJhOku">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC kKPHnP"
    name="content-wrapper" />
  <footer
    className="sc-fMiknA jspwbC" />
</div>
`;

exports[`<Dashboard /> renders correctly with yellow theme 1`] = `
<div
  className="sc-dVhcbM bZEVIZ">
  <header
    className="sc-dxgOiQ huMqzU">
    <a
      className="sc-EHOje hfRqGT"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb hWVPkT">
      <button
        className="fa fa-bars sc-bdVaJa dDYcHZ"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac gJhOku">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC kKPHnP"
    name="content-wrapper" />
  <footer
    className="sc-fMiknA jspwbC" />
</div>
`;

exports[`<Dashboard /> renders correctly with yellow-light theme 1`] = `
<div
  className="sc-dVhcbM bZEVIZ">
  <header
    className="sc-dxgOiQ huMqzU">
    <a
      className="sc-EHOje hfRqGT"
      href="/"
      name="navbar-logo">
      <span
        className="sc-bZQynM iESfHl"
        name="navbar-logo-lg">
        <span>
          <b>
            Admin
          </b>
          LTE
        </span>
      </span>
      <span
        className="sc-gzVnrw fLAIUx"
        name="navbar-logo-sm">
        <span>
          <b>
            A
          </b>
          LT
        </span>
      </span>
    </a>
    <nav
      className="sc-bxivhb hWVPkT">
      <button
        className="fa fa-bars sc-bdVaJa dDYcHZ"
        name="sidebar-toggle"
        onClick={[Function]} />
      <div
        className="sc-htpNat ghgEpK">
        <ul
          className="sc-bwzfXH kmcEOQ"
          name="navbar-menu-wrapper" />
      </div>
    </nav>
  </header>
  <aside
    className="sc-jhAzac eNOrfK">
    <section
      className="sc-hzDkRC FrKTt"
      name="sidebar-wrapper" />
  </aside>
  <div
    className="sc-fBuWsC cazmzY"
    name="content-wrapper" />
  <footer
    className="sc-fMiknA kwRsPU" />
</div>
`;
